# kakolog

./: .gitignore  CLAUDE.md  LICENSE  README.md  hooks-setup.md  pyproject.toml  seiren-review-2026-04-02.sarif  sui-memory-research.md
.github/workflows/: ci.yml
docs/reviews/: 2026-04-02-seiren-architecture.md
hooks/: save-on-session-end.sh  start-server.sh
src/kakolog/: bulk_import.py  chunker.py  cleaner.py  cli.py  config.py  db.py  db_util.py  embedder.py  extractor.py  mcp_server.py  models.py  recall.py  repository.py  reranker.py  save.py  search.py  server.py  service.py  transcript.py
src/kakolog/migrations/: 0001_add_access_count.sql
src/kakolog/service/: __init__.py  save.py  search.py
tests/: conftest.py  test_chunker.py  test_config.py  test_db.py  test_embedder.py  test_repository.py  test_search.py  test_search_quality.py  test_service.py
