[project]
name = "kakolog"
version = "0.1.0"
description = "Long-term memory engine for Claude Code"
requires-python = ">=3.11.11"
dependencies = [
    "sentence-transformers[onnx]>=3.0",
    "sqlite-vec>=0.1.7",
    "mecab-python3>=1.0",
    "optimum>=1.0",
    "onnxruntime>=1.0",
    "sentencepiece>=0.2.1",
    "mcp[cli]>=1.0",
]

[project.scripts]
kakolog = "kakolog.cli:main"
kakolog-mcp = "kakolog.mcp_server:main"
kakolog-import = "kakolog.bulk_import:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kakolog"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
